--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -619,7 +619,7 @@
         top: 0;
         width: 75%;
         height: 100vh;
-        /* margin-left: 0; */
+        z-index: 1;
     }
 
     .header_about {
